# advent-2023

./: .gitignore  CMakeLists.txt
01-p1/: main.cpp
01-p2/: main.cpp
02-p1/: main.cpp
02-p2/: main.cpp
03-p1/: main.cpp
03-p2/: main.cpp
04/: lib.cpp  lib.hpp  main.cpp  tests.cpp
05/: lib.cpp  lib.hpp  main.cpp  tests.cpp
06/: lib.cpp  lib.hpp  tests.cpp
07/: lib.cpp  lib.hpp  tests.cpp
